# 21cmSPACE_Emulators

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  checkpoint.md  examples.md  foundation_usage.md  inference.md  jax-training.md  migration_plan.md  network.md  preprocessing.md  references.md  training.md  workflows.md
docs/examples/: global-21cm.md  power-spectrum-21cm.md
emulators_21cmspace/delta21/: data.py  emulator.py  infer.py  model.py  train.py
emulators_21cmspace/t21/: data.py  emulator.py  infer.py  model.py  train.py
examples/: global_21cm_inference.py  hera_power_spectrum_nested_sampling.py  power_spectrum_21cm_inference.py
examples_21cmspace/: publication_performance_plots.py  twentyonecmspace.py
examples_21cmspace/data/: README.md
examples_21cmspace/data/nenufar/: munshi_2025_table4.csv
examples_21cmspace/delta21/: data.py  emulator.py  file_inference.py  hera_data.py  hera_diagnostics.py  hera_inference.py  nenufar_data.py  nenufar_inference.py  power_spectrum_diagnostics.py  train.py
examples_21cmspace/t21/: data.py  emulator.py  file_inference.py  train.py
jax_emu/: __init__.py  analysis.py  infer.py
jax_emu/analysis/: __init__.py  loss_curves.py
jax_emu/architectures/: __init__.py  mlp.py
jax_emu/data_preprocessing/: __init__.py  parameters.py  preparation.py  tiling.py  transforms.py
jax_emu/inference/: __init__.py  emulator.py  hera.py  likelihood.py  nested_sampling.py  prior.py
jax_emu/training/: __init__.py  dataloader.py  scheduler.py  shutdown.py  trainer.py
jax_emu/utils/: __init__.py  checkpointing.py  config.py  metrics.py
jaxemu_21cmSPACE/: __init__.py
jaxemu_21cmSPACE/architectures/: __init__.py
jaxemu_21cmSPACE/data_preprocessing/: __init__.py  preparation.py  scaling.py  specs.py  transforms.py
jaxemu_21cmSPACE/emulators21/: __init__.py  twentyonecmspace.py
jaxemu_21cmSPACE/emulators21/delta21/: data.py  infer.py  model.py  train.py
jaxemu_21cmSPACE/emulators21/t21/: data.py  infer.py  model.py  train.py
jaxemu_21cmSPACE/training/: __init__.py  trainer.py
jaxemu_21cmSPACE/utils/: __init__.py  checkpointing.py
jobs/: benchmark_gelu_fixed_grid_inference.py  benchmark_gelu_fixed_grid_inference.slurm
src_jax/nenufar_emulators/: __init__.py  archive.py  conventions.py  models.py  serialization.py  trainer.py
src_jax/nenufar_emulators/architectures/: __init__.py
src_jax/nenufar_emulators/core/: __init__.py  batching.py  checkpointing.py  datasets.py  hera_idr4.py  legacy.py  legacy_workflow.py  metrics.py  network.py  normalisation.py  scaling.py  specs.py  tiling.py  training.py  transforms.py
src_jax/nenufar_emulators/data/: __init__.py  hera_idr4.py  preparation.py
src_jax/nenufar_emulators/data_preprocessing/: __init__.py  parameters.py  preparation.py
src_jax/nenufar_emulators/delta21/: __init__.py  data.py  infer.py  model.py  train.py
src_jax/nenufar_emulators/emulators/: __init__.py
src_jax/nenufar_emulators/global_signal/: __init__.py  data.py  infer.py  model.py  train.py
src_jax/nenufar_emulators/power_spectrum/: __init__.py  data.py  infer.py  model.py  train.py
src_jax/twentyonecmspace_emulators/: __init__.py
tests/: test_cli_smoke.py  test_core_contracts.py  test_dataset_architecture.py  test_hera_idr4_migration.py  test_inference_contracts.py  test_legacy_alignment.py  test_tiling_and_training.py  test_train_and_infer_workflows.py  test_twentyonecmspace_migration.py  test_workflow_contracts.py
(+38 files in other folders)
