[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "21cmspace-emulators"
version = "0.1.0"
description = "JAX-native emulators for 21cmSPACE 21-cm inference workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax",
  "flax",
  "orbax-checkpoint",
  "optax",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
21cmspace-delta21-train = "emulators_21cmspace.delta21.train:main"
21cmspace-delta21-infer = "emulators_21cmspace.delta21.infer:main"
21cmspace-t21-train = "emulators_21cmspace.t21.train:main"
21cmspace-t21-infer = "emulators_21cmspace.t21.infer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_emu*", "emulators_21cmspace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
