[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "21cmspace-emulators"
version = "0.1.0"
description = "JAX-native emulators for 21cmSPACE 21-cm inference workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anesthetic",
  "blackjax @ git+https://github.com/handley-lab/blackjax.git@v0.1.0-beta",
  "h5py",
  "matplotlib",
  "numpy",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
cpu = [
  "flax",
  "jax",
  "optax",
  "orbax-checkpoint",
]
cuda12 = [
  "flax",
  "jax[cuda12]",
  "optax",
  "orbax-checkpoint",
]
cuda13 = [
  "flax",
  "jax[cuda13]",
  "optax",
  "orbax-checkpoint",
]
dev = [
  "pytest",
]
[project.scripts]
21cmspace-delta21-train = "examples_21cmspace.delta21.train:main"
21cmspace-t21-train = "examples_21cmspace.t21.train:main"
21cmspace-delta21-infer = "examples_21cmspace.delta21.file_inference:main"
21cmspace-t21-infer = "examples_21cmspace.t21.file_inference:main"
21cmspace-hera-infer = "examples_21cmspace.delta21.hera_inference:main"
21cmspace-nenufar-infer = "examples_21cmspace.delta21.nenufar_inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_emu*", "examples_21cmspace*"]

[tool.setuptools.package-data]
examples_21cmspace = [
  "data/hera/observations_H1C_IDR2/*.h5",
  "data/nenufar/*.csv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
